--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
          <br>
       </div>
       <div class="followers">
-         <a class="github-button" href="https://github.com/talonbragg" data-style="mega" data-count-href="/talonbragg/followers" data-count-api="/users/talonbragg#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @talonbragg on GitHub">Follow <b>@talonbragg</b> Founder</a>
-         <a class="github-button" href="https://github.com/PenetratingShot" data-style="mega" data-count-href="/PenetratingShot/followers" data-count-api="/users/PenetratingShot#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @PenetratingShot on GitHub">Follow <b>@PenetratingShot</b> Co-Founder</a>
+         <a class="github-button" href="https://github.com/talonbragg" data-style="mega" data-count-href="/talonbragg/followers" data-count-api="/users/talonbragg#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @talonbragg on GitHub">Follow <b>@talonbragg</b> (Founder)</a>
+         <a class="github-button" href="https://github.com/PenetratingShot" data-style="mega" data-count-href="/PenetratingShot/followers" data-count-api="/users/PenetratingShot#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @PenetratingShot on GitHub">Follow <b>@PenetratingShot</b> (Co-Founder)</a>
       </div>
          <header class="title">
          <h1 style="color: white;">Custom Markup</h1>
