--- a/index.html
+++ b/index.html
@@ -34,17 +34,20 @@
       </header>
       <div class="howTo">
          <div class="hContent" id="hContent">
-            <h2>How To Use</h2>
-            <h3><u>Direct Link</u></h3>
+            <h3>About</h3>
+            <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. This is BETTER than a CSS framework because you can use your own tags with it instead of using the tags in the CSS framework. This is only <b>715 bytes</b> minified and compressed. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom right corner.</p>
+            <h3>Documentation</h3>
+            <h5>Direct Link</h5>
             <p>The first thing that you need to do is to link it in the <code>&lt;head&gt;</code> tag like so:</p>
             <p><b>Hint: </b>Click the code to copy it to your clipboard.</p>
             <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/cm.min.css"&gt;</code>
-            <p>Custom Markup is fast and lightweight. It doesn't take long to load at all. This is BETTER than a CSS framework because you can use your own tags with it instead of using the tags in the CSS framework. This is only <b>715 bytes</b> minified and compressed. Please remember to star this on <a href="https://github.com/talonbragg/Custom-Markup">github</a> or just hit the star button in the bottom right corner.</p>
-            <h3>NPM install</h3>
+            <h5>NPM</h5>
             <code>$ npm install custommarkup -g</code>
-            <h3 id="download">Download</h3>
+            <h5 id="download">Download</h5>
             <a href="https://custommarkup.ml/dist/cm.zip" download>Download File</a>
             <hr width="50%" height="15px" align="left">
+            <h3>Try It</h3>
+            <h5>Tags</h5>
             <ul style="font-size:20px;">
                <li><code>&lt;c-r&gt;</code></li>
                <li><code>&lt;c-g&gt;</code></li>
@@ -74,7 +77,7 @@
                <li><code>&lt;ghl-s&gt;</code></li>
             </ul>
             <div>
-               <h1>Classes</h1>
+               <h5>Classes</h5>
                <ul>
                   <li><code>.sm</code></li>
                   <li><code>.med</code></li>
@@ -82,7 +85,7 @@
                </ul>
             </div>
             <div>
-               <h1>Examples</h1>
+               <h5>Examples</h5>
                <hr width="50%" height="15px" align="left">
                <c-r>Red</c-r>
                <br>
