--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <html>
    <head>
       <title>Custom Markup | A simple HTML framework</title>
-<!--       Meta Data -->
+      <!-- Meta Data -->
       <meta charset="UTF-8">
       <meta name="description" content="A simple HTML framework to make your day easier.">
       <meta name="keywords" content="custom markup, Custom Markup, Custom, Markup, HTML, framework, html framework">
       <meta name="author" content="Talon Bragg">
-      <meta name="viewport" content="width=device-width">
-<!--       Links -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- Links -->
       <link rel="stylesheet" type="text/css" href="css/main.css">
       <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
       <link rel="stylesheet" type="text/css" href="dist/cm.min.css">
       <link rel="icon" href="https://custommarkup.ml/img/cm.png">
-<!--       Scripts -->
+      <!-- Scripts -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="smoothscroll.js"></script>
    </head>
