--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p><b>Hint: </b>Click the code to copy it to your clipboard.</p>
             <code id="copy">&lt;link rel="stylesheet" type="text/css" href="https://custommarkup.ml/dist/cm.min.css"&gt;</code>
             <h5>NPM</h5>
-            <code>$ npm install custommarkup -g</code>
+            <code id="copy">$ npm install custommarkup -g</code>
             <h5 id="download">Download</h5>
             <a href="https://custommarkup.ml/dist/cm.zip" download>Download File</a>
             <hr width="50%" height="15px" align="left">
