--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" type="text/css" href="css/main.css">
       <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
       <link rel="stylesheet" type="text/css" href="dist/cm.min.css">
-      <link rel="icon" href="https://custommarkup.ml/img/cm.png">
+      <link rel="icon" href="img/cm.png">
       <!-- Scripts -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="smoothscroll.js"></script>
