--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
       <link rel="stylesheet" type="text/css" href="dist/cm.min.css">
       <link rel="icon" href="img/cm.png">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+      <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css"> -->
       <!-- Scripts -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="smoothscroll.js"></script>
