--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <script src="smoothscroll.js"></script>
    </head>
    <body>
-         <header class="title">
+      <div id="social" class="social">
+         <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/talonbragg/Custom-Markup" data-icon="octicon-star" data-style="mega" data-count-href="/talonbragg/Custom-Markup/stargazers" data-count-api="/repos/talonbragg/Custom-Markup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star talonbragg/Custom-Markup on GitHub">Star</a>
+      </div>
+      <header class="title">
          <h1 style="color: white;">Custom Markup</h1>
             <subheading><rainbow>An Easier Way To Use HTML</rainbow></subheading>
          <br><br><br>
