--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <header class="title">
          <h1 style="color: white;">Custom Markup</h1>
-            <subheading><rainbow>An Easier Way To Use HTML</rainbow></subheading>
+            <h3><rainbow>An Easier Way To Use HTML</rainbow></h3>
          <br><br><br>
          <a href="#hContent" class="btn">Show Me!</a>
       </header>
